lab1/Test/L1-A-10-83.output
Error Type A at Line 3
Error Type A at Line 9
Error Type A at Line 23
Error Type A at Line 37
Error Type A at Line 44
Error Type B at Line 49
Error Type B at Line 54
Error Type B at Line 57
