lab1/Test/L1-A-10-83.cmm
struct EDIzv3kn1y {
}jqAxZbWyj_14 ( struct zH6fOkW Z , float sKe5p1gCnBv1l 
  ) @{
  int PXNCdMfEK5K0 [ 1848239340 ] ;
  if ( D_t8OBa0irfSCSm40pcf )   EBAc = wpfXip && K7Q 
    + zLN0ZDkTejVdL0D ( zZXn = VOv8rXhCi9 || O6Kdc_J61Khde 
    == INzn3T_TPqekAmjBe34 / Fdk [ pzKYNl13SJP9_kvJ != 
    QbTYsLWbIhbkc9S0 ( E59K0MszocJvo3Cik52 , OZYqfNjDRwv 
    , ve9kg = vkcB16644WmCEF70IQ &= qH1GAxlA = UYSyh || 
    STkIz0gcMKt8XU >= A + v5OM_p [ zd_JxwF = uH5 < Gl52XoP4twgBALip4ORi 
    + eifO17 / Xo8ms8q2u3R [ aeGaSjsPWQflT5VRKpgm = Jwc 
    = P34m = ciXQE8prYvGgUYKPch8 > PdYpIrcZ8 * iwFvWGvqZLGi 
    ( ADR2Tl5WxEArmzE , HkE_mU49HUYZZl <= ( sWiVg && wAjB3UqAm3G 
    + 1903756737 + ! - 262267035.1579493157 ) ) . gAeqfbevO8DrmqE 
    ] ] ) - lTXCEA7gmvh ( ) ] . qv8luqsmldruHN9by9XI ) 
    * ! - nctOBdr5h1nEvtB1tzw ;

}
int ;
struct {
};
int ;
struct jQbJ31YLeeJ1SKEH @;
int ;
struct E8Ewow6AtA7h ;
struct KQKzF4l2 YSiCOjLGsp4b , TN7k6yHjrwiIAc93 

;
int By9qi6rc5QsB 
;
int ;
int ;
int ;
struct zTsg6O79aF hI8FDq59YaH465Yk 
;
struct {
  int lHHAc2b46dfcul &, IkWT2EXCNuANU = UaO8eOGJN 
    ;
}z1hBPfh 
;
int ;
int qz2fr1JuXxBX95W0j1Gl ( ) {
  if ( TZTDxA1I2w3YPwzgatxr )   SW5aVZIW ;
@else {
    kQmewYj0_ ;
    Q0JW ;
    d499TG7GJSyoMq1WHo ;
    if ( c7 )     BPh8K ;
else     if || ( yoZi4rFaOrSAcbOW )     while ( RnDK 
      )     orowEtsc7DY2Yv ;



<=   }
  return bF ;
}
int / ;
